# sentic-signal

./: .gitignore  CHANGELOG.md  Dockerfile  NOTES.md  README.md  docker-compose.yaml  pyproject.toml
.githooks/: commit-msg
.github/agents/: .gitkeep  README.md  architect.agent.md  reviewer.agent.md  signal-expert.agent.md
.github/prompts/: .gitkeep  README.md  audit-readiness.prompt.md  summarize-news.prompt.md
.github/workflows/: ci.yml  commit-message-check.yml  pipeline.yaml
deploy/sentic-signal-chart/: Chart.yaml  values-alpha-vantage.yaml  values-dev.yaml  values-finnhub.yaml  values.yaml
deploy/sentic-signal-chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  cronjob.yaml
docs/: ALPHA_VANTAGE.md  ARCHITECTURE.md  ROADMAP.md
docs/adr/: ADR-001-PROVIDER-SPECIFIC-DEPLOYMENTS.md
scripts/: gen-env.sh  validate-commit-message.sh
src/sentic_signal/: __init__.py  main.py  models.py
src/sentic_signal/ingestor/: __init__.py  alpha_vantage.py  finnhub.py  yahoo_finance_rss.py
src/sentic_signal/publisher/: rabbitmq_publisher.py
tests/unit/: test_alpha_vantage.py  test_finnhub.py  test_main_provider.py  test_yahoo_finance_rss.py
